# OOP_course_ComputerShop

./: .gitignore  CMakeLists.txt  main.cpp
proto/: characteristics.proto  component.proto  component_type.proto  storage.proto  worker.proto
src/cli/: Context.h  ListModifier.h  StateMachine.cpp  StateMachine.h  Validator.h  WorkersListModifier.h
src/cli/commands/: AvailableCommand.h  Command.h  CommandToStateType.h
src/cli/io/: ConsoleIO.cpp  ConsoleIO.h  IOInterface.h
src/cli/io/string_parsers/: CommandParser.h  ComponentTypeParser.h  ListModifierParser.h  WorkersListModifierParser.h
src/cli/states/: StateFactory.h  StateInterface.h  StateResult.h  StateType.h
src/cli/states/command_states/: ExitState.cpp  ExitState.h  MainMenuState.cpp  MainMenuState.h  PersistState.cpp  PersistState.h  PersistType.h
src/cli/states/command_states/component_commands/: AddComponentState.cpp  AddComponentState.h  RemoveComponentState.cpp  RemoveComponentState.h  ShowComponentState.cpp  ShowComponentState.h  ShowComponentsListState.cpp  ShowComponentsListState.h
src/cli/states/command_states/worker_commands/: AddWorkerState.cpp  AddWorkerState.h  RemoveWorkerState.cpp  (+5 more)
src/core/api/: ProtoConverter.h  ServiceInterface.h  ShopService.cpp  ShopService.h
src/core/api/dto/: ComponentDTO.cpp  ComponentDTO.h  WorkerDTO.cpp  WorkerDTO.h
src/core/memory_model/model_api/: ModelAPIUtils.h  ShopModel.cpp  ShopModel.h
src/core/memory_model/storage/: ShopStorage.cpp  ShopStorage.h  ShopView.cpp  ShopView.h  ShopViewMap.h  WorkerIDGenerator.cpp  WorkerIDGenerator.h
(+21 files in other folders)
